# ottoneu-db

./: .coverage  .cursorrules  .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  Justfile  Makefile  PROJECTIONS_IMPROVEMENTS.md  README.md  README_MCP.md  agent_docs_audit_report.md  analysis_results.md  audit_report.md  config.json  doc_audit_report.md  doc_audit_report_final.md  patch_middleware.js  patch_middleware2.js  pr_desc.txt  pr_description.txt  pyproject.toml  report.md  requirements.txt  schema.sql  test_benchmark2.py  test_sim.ts  update_agents_md.py
.Jules/: bolt.md  palette.md  sentinel.md
.claude/: settings.local.json
.github/: copilot-instructions.md  pull_request_template.md
.jules/: bolt.md  palette.md  sentinel.md
data/: qb_starters.json
docs/: ARCHITECTURE.md  CODE_ORGANIZATION.md  COMMANDS.md  FRONTEND.md  GIT_WORKFLOW.md  TESTING.md  analysis.md  architecture.md  audit_report.md  commands.md  database-schema.md  database.md  development-workflow.md  domain-rules.md  key-files.md  project-overview.md  testing-guide.md  testing.md
migrations/: 001_add_player_stats.sql  002_add_scraper_jobs.sql  006_add_birth_date.sql  008_add_half_season_snaps.sql  011_create_nfl_stats.sql  012_add_users.sql  012_create_arbitration_plans.sql  012_market_projections.sql  014_add_missing_constraints.sql  016_feature_projection_system.sql  017_add_passing_attempts_completions.sql  019_add_arbitration_progress.sql  020_add_arbitration_allocation_details.sql  021_drop_player_stats_raw_columns.sql  022_add_advanced_receiving_stats.sql  (+3 more)
(+299 files in other folders)
